--- a/css/style.css
+++ b/css/style.css
@@ -9,7 +9,18 @@
 
 body {
   font-family: 'Kumbh Sans', sans-serif;
+  display: flex;
+  justify-content: center;
+  align-items: center;
   height: 100vh;
   background-image: linear-gradient(to bottom, #af67e9 60%, #6565e7); }
+
+.card {
+  background-color: #fff;
+  box-shadow: 0 1rem 2rem rgba(0, 0, 0, 0.5);
+  border-radius: 1.5rem;
+  display: flex;
+  flex-direction: column;
+  align-items: center; }
 
 /*# sourceMappingURL=style.css.map */
