--- a/css/style.css
+++ b/css/style.css
@@ -23,4 +23,19 @@ body {
   flex-direction: column;
   align-items: center; }
 
+.accordion {
+  align-self: stretch;
+  text-align: left; }
+  .accordion__title {
+    display: flex;
+    justify-content: space-between;
+    align-items: center; }
+    .accordion__title::after {
+      content: '';
+      display: inline-block;
+      background-image: url(../assets/icon-arrow-down.svg);
+      background-repeat: no-repeat;
+      height: 1rem;
+      width: 1.5rem; }
+
 /*# sourceMappingURL=style.css.map */
