--- a/sass/main.scss
+++ b/sass/main.scss
@@ -50,3 +50,23 @@ body {
   flex-direction: column;
   align-items: center;
 }
+
+.accordion {
+  align-self: stretch;
+  text-align: left;
+
+  &__title {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+
+    &::after {
+      content: '';
+      display: inline-block;
+      background-image: url(../assets/icon-arrow-down.svg);
+      background-repeat: no-repeat;
+      height: 1rem;
+      width: 1.5rem;
+    }
+  }
+}
