--- a/css/style.css
+++ b/css/style.css
@@ -21,11 +21,15 @@ body {
   border-radius: 1.5rem;
   display: flex;
   flex-direction: column;
-  align-items: center; }
+  align-items: center;
+  padding: 2rem; }
 
 .accordion {
+  border-bottom: 1px solid #e7e7e9;
   align-self: stretch;
-  text-align: left; }
+  text-align: left;
+  margin: 2rem 0 0.25rem 0;
+  padding-bottom: 1.75rem; }
   .accordion__title {
     display: flex;
     justify-content: space-between;
