--- a/sass/main.scss
+++ b/sass/main.scss
@@ -49,11 +49,18 @@ body {
   display: flex;
   flex-direction: column;
   align-items: center;
+
+  padding: 2rem;
 }
 
 .accordion {
+  border-bottom: 1px solid $divider-gray;
+
   align-self: stretch;
   text-align: left;
+
+  margin: 2rem 0 0.25rem 0;
+  padding-bottom: 1.75rem;
 
   &__title {
     display: flex;
