--- a/css/style.css
+++ b/css/style.css
@@ -29,7 +29,8 @@ body {
   align-self: stretch;
   text-align: left;
   margin: 2rem 0 0.25rem 0;
-  padding-bottom: 1.75rem; }
+  padding-bottom: 1.75rem;
+  cursor: pointer; }
   .accordion__title {
     display: flex;
     justify-content: space-between;
