--- a/sass/main.scss
+++ b/sass/main.scss
@@ -62,6 +62,8 @@ body {
   margin: 2rem 0 0.25rem 0;
   padding-bottom: 1.75rem;
 
+  cursor: pointer;
+
   &__title {
     display: flex;
     justify-content: space-between;
