--- a/css/style.css
+++ b/css/style.css
@@ -40,6 +40,8 @@ body {
       display: inline-block;
       background-image: url(../assets/icon-arrow-down.svg);
       background-repeat: no-repeat;
+      background-size: 75%;
+      background-position: center;
       height: 1rem;
       width: 1.5rem; }
 
