--- a/sass/main.scss
+++ b/sass/main.scss
@@ -72,8 +72,12 @@ body {
     &::after {
       content: '';
       display: inline-block;
+
       background-image: url(../assets/icon-arrow-down.svg);
       background-repeat: no-repeat;
+      background-size: 75%;
+      background-position: center;
+
       height: 1rem;
       width: 1.5rem;
     }
