--- a/css/style.css
+++ b/css/style.css
@@ -38,11 +38,14 @@ body {
     .accordion__title::after {
       content: '';
       display: inline-block;
+      transition: all 0.2s;
       background-image: url(../assets/icon-arrow-down.svg);
       background-repeat: no-repeat;
       background-size: 75%;
       background-position: center;
       height: 1rem;
       width: 1.5rem; }
+  .accordion--open .accordion__title::after {
+    transform: rotate(180deg); }
 
 /*# sourceMappingURL=style.css.map */
