--- a/sass/main.scss
+++ b/sass/main.scss
@@ -72,6 +72,7 @@ body {
     &::after {
       content: '';
       display: inline-block;
+      transition: all 0.2s;
 
       background-image: url(../assets/icon-arrow-down.svg);
       background-repeat: no-repeat;
@@ -81,5 +82,9 @@ body {
       height: 1rem;
       width: 1.5rem;
     }
+  }
+
+  &--open &__title::after {
+    transform: rotate(180deg);
   }
 }
