minor(accordion): set accordion title to bold when open

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -84,6 +84,10 @@ body {
     }
   }
 
+  &--open &__title {
+    font-weight: 700;
+  }
+
   &--open &__title::after {
     transform: rotate(180deg);
   }
