--- a/css/style.css
+++ b/css/style.css
@@ -45,6 +45,8 @@ body {
       background-position: center;
       height: 1rem;
       width: 1.5rem; }
+  .accordion--open .accordion__title {
+    font-weight: 700; }
   .accordion--open .accordion__title::after {
     transform: rotate(180deg); }
 
