--- a/sass/main.scss
+++ b/sass/main.scss
@@ -51,6 +51,8 @@ body {
   align-items: center;
 
   padding: 2rem;
+
+  width: 85%;
 }
 
 .accordion {
@@ -90,5 +92,20 @@ body {
 
   &--open &__title::after {
     transform: rotate(180deg);
+  }
+
+  &__content {
+    height: 0;
+    opacity: 0;
+
+    width: 100%;
+
+    transition: all 0.1s ease-out;
+  }
+
+  &--open &__content {
+    opacity: 1;
+    height: auto;
+    margin-top: 1rem;
   }
 }
