--- a/css/style.css
+++ b/css/style.css
@@ -1,82 +1,1 @@
-* {
-  margin: 0;
-  padding: 0;
-  box-sizing: inherit; }
-
-:root {
-  box-sizing: border-box;
-  font-size: 75%; }
-
-body {
-  font-family: 'Kumbh Sans', sans-serif;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  height: 100vh;
-  background-image: linear-gradient(to bottom, #af67e9 60%, #6565e7); }
-
-.card {
-  background-color: #fff;
-  box-shadow: 0 1rem 2rem rgba(0, 0, 0, 0.5);
-  border-radius: 1.5rem;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  padding: 2rem;
-  width: 85%; }
-  .card__header {
-    color: #1d1e35; }
-  .card__image {
-    height: 8rem;
-    width: 100%;
-    position: relative;
-    text-align: center; }
-    .card__image img {
-      position: absolute; }
-    .card__image--woman {
-      top: 50%;
-      left: 50%;
-      transform: translate(-55%, -90%); }
-    .card__image--shadow {
-      top: 50%;
-      left: 50%;
-      transform: translate(-50%, -75%); }
-
-.accordion {
-  border-bottom: 1px solid #e7e7e9;
-  align-self: stretch;
-  text-align: left;
-  margin: 2rem 0 0.5rem 0;
-  padding-bottom: 1.5rem;
-  cursor: pointer; }
-  .accordion__title {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    color: #1d1e35; }
-    .accordion__title::after {
-      content: '';
-      display: inline-block;
-      transition: all 0.2s;
-      background-image: url(../assets/icon-arrow-down.svg);
-      background-repeat: no-repeat;
-      background-size: 75%;
-      background-position: center;
-      height: 1rem;
-      width: 1.5rem; }
-  .accordion--open .accordion__title {
-    font-weight: 700; }
-  .accordion--open .accordion__title::after {
-    transform: rotate(180deg); }
-  .accordion__content {
-    height: 0;
-    opacity: 0;
-    width: 100%;
-    transition: all 0.1s ease-out; }
-  .accordion--open .accordion__content {
-    opacity: 1;
-    height: auto;
-    margin-top: 1rem;
-    color: #4a4b5e; }
-
-/*# sourceMappingURL=style.css.map */
+*{margin:0;padding:0;box-sizing:inherit}:root{box-sizing:border-box;font-size:75%}body{font-family:'Kumbh Sans', sans-serif;display:flex;justify-content:center;align-items:center;height:100vh;background-image:linear-gradient(to bottom, #af67e9 60%, #6565e7)}.card{background-color:#fff;box-shadow:0 1rem 2rem rgba(0,0,0,0.5);border-radius:1.5rem;display:flex;flex-direction:column;align-items:center;padding:2rem;width:85%}.card__header{color:#1d1e35}.card__image{height:8rem;width:100%;position:relative;text-align:center}.card__image img{position:absolute}.card__image--woman{top:50%;left:50%;transform:translate(-55%, -90%)}.card__image--shadow{top:50%;left:50%;transform:translate(-50%, -75%)}.accordion{border-bottom:1px solid #e7e7e9;align-self:stretch;text-align:left;margin:2rem 0 0.5rem 0;padding-bottom:1.5rem;cursor:pointer}.accordion__title{display:flex;justify-content:space-between;align-items:center;color:#1d1e35}.accordion__title::after{content:'';display:inline-block;transition:all 0.2s;background-image:url(../assets/icon-arrow-down.svg);background-repeat:no-repeat;background-size:75%;background-position:center;height:1rem;width:1.5rem}.accordion--open .accordion__title{font-weight:700}.accordion--open .accordion__title::after{transform:rotate(180deg)}.accordion__content{height:0;opacity:0;width:100%;transition:all 0.1s ease-out}.accordion--open .accordion__content{opacity:1;height:auto;margin-top:1rem;color:#4a4b5e}
