--- a/sass/main.scss
+++ b/sass/main.scss
@@ -56,8 +56,11 @@ body {
 
   @include desktop-styles {
     display: grid;
-    grid-template-columns: 1fr .75fr;
+    grid-template-columns: 1fr 0.75fr;
+    justify-items: center;
     width: auto;
+    overflow: hidden;
+    padding: 6rem;
   }
 
   &__header {
@@ -76,6 +79,10 @@ body {
     position: relative;
     text-align: center;
 
+    @include desktop-styles {
+      width: 40%;
+    }
+
     img {
       position: absolute;
     }
@@ -84,12 +91,22 @@ body {
       top: 50%;
       left: 50%;
       transform: translate(-55%, -90%);
+
+      @include desktop-styles {
+        transform: translate(-80%, -50%);
+      }
     }
 
     &--shadow {
       top: 50%;
       left: 50%;
       transform: translate(-50%, -75%);
+
+      @include desktop-styles {
+        transform: translate(-80%, -55%);
+        width: 50rem;
+        min-height: 100%;
+      }
     }
   }
 }
