feat(accordion): style active state to the entries

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -69,6 +69,7 @@ body {
 
     @include desktop-styles {
       text-align: left;
+      font-size: 2.5rem
     }
   }
 
@@ -128,6 +129,13 @@ body {
     align-items: center;
 
     color: $primary-text-blue;
+
+    @include desktop-styles {
+      font-size: 1.25rem;
+      &:hover {
+        color: $primary-text-red;
+      }
+    }
 
     &::after {
       content: '';
