--- a/css/style.css
+++ b/css/style.css
@@ -37,7 +37,8 @@ body {
     text-align: center; }
     @media only screen and (min-width: 375px) {
       .card__header {
-        text-align: left; } }
+        text-align: left;
+        font-size: 2.5rem; } }
   .card__image {
     height: 8rem;
     width: 100%;
@@ -77,6 +78,11 @@ body {
     justify-content: space-between;
     align-items: center;
     color: #1d1e35; }
+    @media only screen and (min-width: 375px) {
+      .accordion__title {
+        font-size: 1.25rem; }
+        .accordion__title:hover {
+          color: #f47c57; } }
     .accordion__title::after {
       content: '';
       display: inline-block;
